# QKDP

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  BB84.ipynb  Guillo_BB84.ipynb  Manuel_BB84.ipynb  README.md  environment.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: BB84-checkpoint.ipynb  Guillo_BB84-checkpoint.ipynb  README-checkpoint.md
data/: Distribution-Data-for-BB84.csv
docs/: conf.py  document.rst
docs/source/: conf.py
notebooks/: Agent_profile.txt  BB84.ipynb  profiling.ipynb  qCryptoShowcase.ipynb  qstate_measure.txt
notebooks/data/: Agent_profile.txt  BB84_profile.txt  qstate_measure_all.txt  qstate_measure_all_profile.txt  qstate_measure_profile.txt
src/qcrypto/: agents.py  gates.py  qstates.py  simbasics.py
tests/: test_simbasics.py
