[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qcrypto"
version = "0.2.0"
authors = [
    {name = "Roy Cruz", email = "roy.cruz@upr.edu"},
    {name = "Guillermo Fidalgo", email = "guillermo.fidalgo@upr.edu"},
    {name = "Tetiana Mazurets", email = "tetiana.mazurets@upr.edu"},
]
description = "A package for simple quantum cryptography simulations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.26.4"
]

[project.urls]
Homepage = "https://github.com/GuillermoFidalgo/QKDP"
