[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qcrypto"
version = "1.0.0"
authors = [
    {name = "Roy Cruz", email = "roy.cruz@upr.edu"},
    {name = "Guillermo Fidalgo", email = "guillermo.fidalgo@upr.edu"},
    {name = "Tetiana Mazurets", email = "tetiana.mazurets@upr.edu"},
]
description = "A package for simple quantum cryptography simulations."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage"
]

[project.urls]
Homepage = "https://github.com/GuillermoFidalgo/QKDP"
